# MAI_Robot

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Order.h  README.md  Robot.cpp  Robot.h  Robot_control.cpp  Robot_control.h  User.cpp  docker-compose.yml  main.cpp
BuildTest/: CMakeLists.txt  Camera.cpp  Camera.h  Robot.h  Robot_control.cpp  Robot_control.h  Server.cpp  Server.h  User.h  main.cpp
OpenCVtest2/: Camera.cpp  Camera.h  MyTemplate.vstemplate  OpenCVtest2.vcxproj  OpenCVtest2.vcxproj.filters  Order.h  Robot.cpp  Robot.h  Robot_control.cpp  Robot_control.h  Server.cpp  Server.h  User.cpp  User.h  main.cpp
Version20.03.2023/: .gitignore  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Dockerfile  Makefile  Order_control.cpp  Order_control.h  Robot.cpp  Robot.h  Robot_control.cpp  Robot_control.h  cmake_install.cmake  main  main.cpp
docs/: ClassDiagram.txt  Отчет Робот-доставщик. Прокофьев, Сухарев.docx
docs/Sequence Diagram/: SequenceDiagram.txt
docs/UseCase Diagram/: UseCase UML.text
robot_server/: CMakeLists.txt  Camera.cpp  Camera.h  Camera2.cpp  Camera2.h  Dockerfile  Order.cpp  Order.h  Order_control.cpp  Order_control.h  Robot.cpp  Robot.h  Robot_control.cpp  Robot_control.h  entrypoint.sh  main.cpp
tg_bot/: Dockerfile  README.md  docker-compose.yml  requirements.txt
tg_bot/bot/: .env  .env.example  __main__.py  app.py  config.py
tg_bot/bot/handlers/: commands.py  delivery.py  start.py
tg_bot/bot/structures/: filters.py  fsm_groups.py  states.py
tg_bot/bot/structures/keyboards/: base_buttons.py  delivery.py
